corrections overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
+    overflow-x: hidden;
 }
 
 body {
@@ -36,6 +37,12 @@ img.logo {
 
 img.logo-mobile {
     height: 40px;
+    cursor: pointer;
+}
+
+span {
+    font-size: 26px;
+    font-weight: 600;
 }
 
 .cs-btn-primary {
@@ -95,18 +102,21 @@ header {
 /* Jumbotron */
 #jumbotron {
     padding-top: 50px;
-    height: 600px;
+    height: 1100px;
+}
+
+#jumbotron img.logo {
+    margin-bottom: 20px;
+    margin-right: 5px;
 }
 
 .jumbotron-logo {
-    width: 600px;
     height: 550px;
 }
 
 /* Buisness plans */
 #buisness-plans {
     background-color: #F5F8FA;
-    padding-top: 500px;
 }
 
 #buisness-plans .cs-btn-primary,
@@ -115,23 +125,23 @@ header {
     margin-bottom: 20px;
 }
 
+.product {
+    background-color: #fff;
+}
+
 /* Media */
 @media screen and (min-width: 575px) {
+    #jumbotron {
+        height: 600px;
+        overflow-y: hidden;
+    }
     #buisness-plans {
         padding-top: 0px;
     }
 }
 
-@media screen and (min-width: 680px) {
-    .jumbotron-logo {
-        right: calc(0% - 18rem);
-    }
-}
 
 @media screen and (min-width: 768px) {
-    .jumbotron-logo {
-        right: calc(0% - 12rem);
-    }
     #buisness-plans .cs-btn-primary,
     #buisness-plans .cs-btn-secondary {
         width: auto;
@@ -139,17 +149,8 @@ header {
     }
 }
 
-@media screen and (min-width: 1024px) {
-    .jumbotron-logo {
-        right: 10px;
-    }
-}
-
 @media screen and (min-width: 992px) {
-    .jumbotron-logo {
-        height: 500px;
-    }
     #jumbotron {
-        padding-top: 100px;
+        padding-top: 99px;
     }
 }
